--- a/redmine/manifests/redmine-rc.yaml
+++ b/redmine/manifests/redmine-rc.yaml
@@ -30,11 +30,17 @@ spec:
         - name: MARIADB_PORT
           value: "3306"
         - name: MARIADB_PASSWORD
-          value: ""
+          valueFrom:
+            secretKeyRef:
+              name: mariadb
+              key: mariadb-root-password
         - name: REDMINE_USERNAME
           value: "user"
         - name: REDMINE_PASSWORD
-          value: "bitnami"
+          valueFrom:
+            secretKeyRef:
+              name: redmine
+              key: redmine-password
         - name: REDMINE_EMAIL
           value: "user@example.com"
         - name: REDMINE_LANG
@@ -46,7 +52,10 @@ spec:
         - name: SMTP_USER
           value: ""
         - name: SMTP_PASSWORD
-          value: ""
+          valueFrom:
+            secretKeyRef:
+              name: redmine
+              key: smtp-password
         - name: SMTP_TLS
           value: ""
         ports:
