--- a/redmine/tpl/redmine-rc.yaml
+++ b/redmine/tpl/redmine-rc.yaml
@@ -30,11 +30,17 @@ spec:
         - name: MARIADB_PORT
           value: "3306"
         - name: MARIADB_PASSWORD
-          value: {{ .mariadbRootPassword | quote }}
+          valueFrom:
+            secretKeyRef:
+              name: mariadb
+              key: mariadb-root-password
         - name: REDMINE_USERNAME
           value: {{ .redmineUser | quote }}
         - name: REDMINE_PASSWORD
-          value: {{ .redminePassword | quote }}
+          valueFrom:
+            secretKeyRef:
+              name: redmine
+              key: redmine-password
         - name: REDMINE_EMAIL
           value: {{ .redmineEmail | quote }}
         - name: REDMINE_LANG
@@ -46,7 +52,10 @@ spec:
         - name: SMTP_USER
           value: {{ .smtpUser | quote }}
         - name: SMTP_PASSWORD
-          value: {{ .smtpPassword | quote }}
+          valueFrom:
+            secretKeyRef:
+              name: redmine
+              key: smtp-password
         - name: SMTP_TLS
           value: {{ .smtpTls | quote }}
         ports:
