--- a/testlink/manifests/testlink-rc.yaml
+++ b/testlink/manifests/testlink-rc.yaml
@@ -30,11 +30,17 @@ spec:
         - name: MARIADB_PORT
           value: "3306"
         - name: MARIADB_PASSWORD
-          value: ""
+          valueFrom:
+            secretKeyRef:
+              name: mariadb
+              key: mariadb-root-password
         - name: TESTLINK_USERNAME
           value: "user"
         - name: TESTLINK_PASSWORD
-          value: "bitnami"
+          valueFrom:
+            secretKeyRef:
+              name: testlink
+              key: testlink-password
         - name: TESTLINK_EMAIL
           value: "user@example.com"
         - name: TESTLINK_LANGUAGE
@@ -50,7 +56,10 @@ spec:
         - name: SMTP_USER
           value: ""
         - name: SMTP_PASSWORD
-          value: ""
+          valueFrom:
+            secretKeyRef:
+              name: testlink
+              key: smtp-password
         - name: SMTP_PROTOCOL
           value: ""
         ports:
