--- a/bitnami/node/requirements.yaml
+++ b/bitnami/node/requirements.yaml
@@ -1,8 +1,8 @@
 dependencies:
 - name: mongodb
   repository: https://kubernetes-charts.storage.googleapis.com/
-  version: x.x.x
+  version: 3.x.x
   condition: mongodb.install
 - name: bitnami-common
   repository: https://charts.bitnami.com/bitnami
-  version: 0.0.x
+  version: 0.x.x
