--- a/bitnami/zookeeper/templates/statefulset.yaml
+++ b/bitnami/zookeeper/templates/statefulset.yaml
@@ -10,6 +10,7 @@ metadata:
 spec:
   serviceName: {{ template "zookeeper.fullname" . }}-headless
   replicas: {{ .Values.replicaCount }}
+  podManagementPolicy: {{ .Values.podManagementPolicy | quote }}
   updateStrategy:
     type: {{ .Values.updateStrategy | quote }}
   selector:
@@ -55,8 +56,8 @@ spec:
          - -ec
          - |
             # Execute entrypoint as usual after obtaining ZOO_SERVER_ID based on POD hostname
-            HOST=`hostname -s`
-            if [[ $HOST =~ (.*)-([0-9]+)$ ]]; then
+            HOSTNAME=`hostname -s`
+            if [[ $HOSTNAME =~ (.*)-([0-9]+)$ ]]; then
               ORD=${BASH_REMATCH[2]}
               export ZOO_SERVER_ID=$((ORD+1))
             else
@@ -84,10 +85,11 @@ spec:
           value: {{ .Values.maxClientCnxns | quote }}
         - name: ZOO_SERVERS
           {{- $replicaCount := int .Values.replicaCount }}
-          {{- $name := default .Chart.Name .Values.nameOverride -}}
-          {{- $zookeeperFullname := printf "%s-%s" .Release.Name $name | trunc 24  }}
+          {{- $followerPort := int .Values.service.followerPort }}
+          {{- $electionPort := int .Values.service.electionPort }}
+          {{- $zookeeperFullname := include "zookeeper.fullname" . }}
           {{- $zookeeperHeadlessServiceName := printf "%s-%s" $zookeeperFullname "headless" | trunc 24  }}
-          value: {{range $i, $e := until $replicaCount }}{{ $zookeeperHostname }}-{{ $e }}.{{ $zookeeperHeadlessServiceName }}:2888:3888 {{ end }}
+          value: {{range $i, $e := until $replicaCount }}{{ $zookeeperFullname }}-{{ $e }}.{{ $zookeeperHeadlessServiceName }}.default.svc.cluster.local:{{ $followerPort }}:{{ $electionPort }} {{ end }}
         {{- if .Values.auth.enabled }}
         - name: ZOO_ENABLE_AUTH
           value: "yes"
@@ -117,12 +119,16 @@ spec:
         - name: JVMFLAGS
           value: {{ .Values.jvmFlags | quote }}
         ports:
-        - name: zookeeper
+        - name: client
           containerPort: {{ .Values.service.port }}
+        - name: follower
+          containerPort: {{ .Values.service.followerPort }}
+        - name: election
+          containerPort: {{ .Values.service.electionPort }}
         {{- if .Values.livenessProbe.enabled }}
         livenessProbe:
           tcpSocket:
-            port: zookeeper
+            port: client
           initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
           periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
           timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
@@ -132,7 +138,7 @@ spec:
         {{- if .Values.readinessProbe.enabled }}
         readinessProbe:
           tcpSocket:
-            port: zookeeper
+            port: client
           initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
           periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
           timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
