--- a/bitnami/zookeeper/templates/svc-headless.yaml
+++ b/bitnami/zookeeper/templates/svc-headless.yaml
@@ -11,9 +11,15 @@ spec:
   type: ClusterIP
   clusterIP: None
   ports:
-  - name: zookeeper
+  - name: client
     port: 2181
-    targetPort: zookeeper
+    targetPort: client
+  - name: follower
+    port: 2888
+    targetPort: follower
+  - name: election
+    port: 3888
+    targetPort: election
   selector:
     app: {{ template "zookeeper.name" . }}
     release: {{ .Release.Name | quote }}
