--- a/bitnami/zookeeper/values.yaml
+++ b/bitnami/zookeeper/values.yaml
@@ -22,10 +22,15 @@ image:
   ##
   debug: false
 
-## StatefulSet controller supports automated updates, there are two valid update strategies, RollingUpdate and OnDelete
+## StatefulSet controller supports automated updates. There are two valid update strategies: RollingUpdate and OnDelete
 ## ref: https://kubernetes.io/docs/tutorials/stateful-application/basic-stateful-set/#updating-statefulsets
 ##
 updateStrategy: RollingUpdate
+
+## StatefulSet controller supports relax its ordering guarantees while preserving its uniqueness and identity guarantees. There are two valid pod management policies: OrderedReady and Parallel
+## ref: https://kubernetes.io/docs/tutorials/stateful-application/basic-stateful-set/#pod-management-policy
+##
+podManagementPolicy: Parallel
 
 ## Number of ZooKeeper nodes
 ##
@@ -93,6 +98,8 @@ heapSize: 1024
 service:
   type: ClusterIP
   port: 2181
+  followerPort: 2888
+  electionPort: 3888
 
 ## Zookeeper Pod Security Context
 securityContext:
