--- a/bitnami/mysql/Chart.yaml
+++ b/bitnami/mysql/Chart.yaml
@@ -1,6 +1,6 @@
 name: mysql
 version: 1.1.1
-appVersion: 5.7.22
+appVersion: 5.7.22-debian-9
 description: Chart to create a Highly available MySQL cluster
 keywords:
 - mysql
