kubeapps: bump chart version to 0.3.3

--- a/bitnami/kubeapps/templates/kubeapps-frontend-service.yaml
+++ b/bitnami/kubeapps/templates/kubeapps-frontend-service.yaml
@@ -7,6 +7,10 @@ metadata:
     chart: {{ template "kubeapps.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+{{- with .Values.frontend.service.annotations }}
+  annotations:
+{{ toYaml . | indent 4 }}
+{{- end }}
 spec:
   type: {{ .Values.frontend.service.type }}
   ports:
