--- a/bitnami/kubeapps/templates/tiller-proxy-secret.yaml
+++ b/bitnami/kubeapps/templates/tiller-proxy-secret.yaml
@@ -1,4 +1,6 @@
+# The tls ca certificate is only required when tls.verify is set to true, we fail otherwise.
 {{-  if .Values.tillerProxy.tls -}}
+{{ required "A valid CA certificate \".Values.tillerProxy.tls.ca\" needs to be provided if tls-verify is set to true" (and .Values.tillerProxy.tls.verify .Values.tillerProxy.tls.ca) }} 
 apiVersion: v1
 kind: Secret
 metadata:
@@ -9,8 +11,10 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 data:
+{{- if .Values.tillerProxy.tls.ca }}
   ca.crt: |-
 {{ .Values.tillerProxy.tls.ca | b64enc | indent 4 }}
+{{- end }}
   tls.crt: |-
 {{ .Values.tillerProxy.tls.cert | b64enc | indent 4 }}
   tls.key: |-
