--- a/bitnami/kubeapps/templates/tiller-proxy-secret.yaml
+++ b/bitnami/kubeapps/templates/tiller-proxy-secret.yaml
@@ -1,6 +1,8 @@
 # The tls ca certificate is only required when tls.verify is set to true, we fail otherwise.
 {{-  if .Values.tillerProxy.tls -}}
-{{ required "A valid CA certificate \".Values.tillerProxy.tls.ca\" needs to be provided if tls-verify is set to true" (and .Values.tillerProxy.tls.verify .Values.tillerProxy.tls.ca) }} 
+{{- if and (.Values.tillerProxy.tls.verify) (not (.Values.tillerProxy.tls.ca)) -}}
+{{ fail "tillerProxy.tls.ca: A valid CA certificate needs to be provided if tls-verify is set to true." }}
+{{- end -}}
 apiVersion: v1
 kind: Secret
 metadata:
