kubeapps: bump chart version to 0.4.6

--- a/bitnami/kubeapps/templates/tiller-proxy-secret.yaml
+++ b/bitnami/kubeapps/templates/tiller-proxy-secret.yaml
@@ -2,7 +2,7 @@
 {{-  if .Values.tillerProxy.tls -}}
 {{- if and (.Values.tillerProxy.tls.verify) (not (.Values.tillerProxy.tls.ca)) -}}
 {{ fail "tillerProxy.tls.ca: A valid CA certificate needs to be provided if tls-verify is set to true." }}
-{{- end -}}
+{{- end }}
 apiVersion: v1
 kind: Secret
 metadata:
