--- a/bitnami/mysql/templates/master-statefulset.yaml
+++ b/bitnami/mysql/templates/master-statefulset.yaml
@@ -120,6 +120,10 @@ spec:
         - name: config
           mountPath: /opt/bitnami/mysql/conf/my.cnf
           subPath: my.cnf
+{{- if .Values.master.persistence.existingClaim }}
+        - name: {{ .Values.master.persistence.existingClaim }}
+          mountPath: {{ .Values.master.persistence.mountPath }}
+{{- end }}
 {{- end }}
 {{- if .Values.metrics.enabled }}
       - name: metrics
@@ -151,6 +155,11 @@ spec:
 {{ toYaml .Values.metrics.resources | indent 10 }}
 {{- end }}
       volumes:
+      {{- if and .Values.master.persistence.enabled .Values.master.persistence.existingClaim }}
+        - name: {{ .Values.master.persistence.existingClaim }}
+          persistentVolumeClaim:
+            claimName: {{ .Values.master.persistence.existingClaim }}
+      {{ end }}
       {{- if .Values.master.config }}
         - name: config
           configMap:
