--- a/bitnami/kubeapps/templates/chartsvc-deployment.yaml
+++ b/bitnami/kubeapps/templates/chartsvc-deployment.yaml
@@ -36,6 +36,10 @@ spec:
         ports:
         - name: http
           containerPort: {{ .Values.chartsvc.service.port }}
+        livenessProbe:
+{{ toYaml .Values.chartsvc.livenessProbe | indent 10 }}
+        readinessProbe:
+{{ toYaml .Values.chartsvc.readinessProbe | indent 10 }}
         resources:
 {{ toYaml .Values.chartsvc.resources | indent 12 }}
     {{- with .Values.chartsvc.nodeSelector }}
