kubeapps: bump chart version to 0.4.9

--- a/bitnami/kubeapps/templates/tiller-proxy-deployment.yaml
+++ b/bitnami/kubeapps/templates/tiller-proxy-deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.tillerProxy.replicaCount }}
   selector:
     matchLabels:
       app: {{ template "kubeapps.tiller-proxy.fullname" . }}
