--- a/bitnami/kubeapps/templates/chartsvc-deployment.yaml
+++ b/bitnami/kubeapps/templates/chartsvc-deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.chartsvc.replicaCount }}
   selector:
     matchLabels:
       app: {{ template "kubeapps.chartsvc.fullname" . }}
