kubeapps: bump chart version to 0.5.0

--- a/bitnami/kubeapps/templates/tiller-proxy-deployment.yaml
+++ b/bitnami/kubeapps/templates/tiller-proxy-deployment.yaml
@@ -38,7 +38,7 @@ spec:
         {{- end }}
         ports:
         - name: http
-          containerPort: {{ .Values.chartsvc.service.port }}
+          containerPort: {{ .Values.tillerProxy.service.port }}
         env:
         - name: POD_NAMESPACE
           valueFrom:
