--- a/bitnami/kafka/templates/statefulset.yaml
+++ b/bitnami/kafka/templates/statefulset.yaml
@@ -8,6 +8,10 @@ metadata:
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
 spec:
+  selector:
+    matchLabels:
+      app: {{ template "kafka.name" . }}
+      release: "{{ .Release.Name }}"
   serviceName: {{ template "kafka.fullname" . }}-headless
   podManagementPolicy: "Parallel"
   replicas: {{ .Values.replicaCount }}
