[bitnami/metrics-server] Fix chart not being upgradable
Signed-off-by: Javier J. Salmeron Garcia <jsalmeron@bitnami.com>

--- a/bitnami/metrics-server/templates/deployment.yaml
+++ b/bitnami/metrics-server/templates/deployment.yaml
@@ -11,6 +11,10 @@ spec:
   selector:
     matchLabels:
       app: {{ template "metrics-server.name" . }}
+      release: "{{ .Release.Name }}"
+  selector:
+    matchLabels:
+      app: {{ template "metrics-server.name" . }}
       release: {{ .Release.Name | quote }}
       chart: {{ template "metrics-server.chart" . }}
   template:
