[bitnami/mysql] Use namespaces on 'slave.fullname' & 'master.fullname' macros to avoid conflicts with other charts

--- a/bitnami/mysql/templates/master-configmap.yaml
+++ b/bitnami/mysql/templates/master-configmap.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "master.fullname" . }}
+  name: {{ template "mysql.master.fullname" . }}
   labels:
     app: {{ template "name" . }}
     component: "master"
