--- a/bitnami/mysql/templates/initialization-configmap.yaml
+++ b/bitnami/mysql/templates/initialization-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "master.fullname" . }}-init-scripts
+  name: {{ template "mysql.master.fullname" . }}-init-scripts
   labels:
     app: {{ template "name" . }}
     component: "master"
