--- a/bitnami/mysql/templates/slave-configmap.yaml
+++ b/bitnami/mysql/templates/slave-configmap.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "slave.fullname" . }}
+  name: {{ template "mysql.slave.fullname" . }}
   labels:
     app: {{ template "name" . }}
     component: "slave"
