--- a/bitnami/mysql/templates/slave-svc.yaml
+++ b/bitnami/mysql/templates/slave-svc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "slave.fullname" . }}
+  name: {{ template "mysql.slave.fullname" . }}
   labels:
     app: "{{ template "name" . }}"
     chart: {{ template "mysql.chart" . }}
