--- a/bitnami/jenkins/templates/deployment.yaml
+++ b/bitnami/jenkins/templates/deployment.yaml
@@ -31,12 +31,18 @@ spec:
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         env:
         - name: JENKINS_USERNAME
-          value: {{ default "" .Values.jenkinsUser | quote }}
+          value: {{ .Values.jenkinsUser | quote }}
         - name: JENKINS_PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ template "fullname" . }}
               key: jenkins-password
+        - name: JENKINS_HOME
+          value: {{ .Values.jenkinsHome | quote }}
+        - name: DISABLE_JENKINS_INITIALIZATION
+          value: {{ .Values.disableInitialization | quote }}
+        - name: JAVA_OPTS
+          value: {{ .Values.javaOpts | quote }}
         ports:
         - name: http
           containerPort: 8080
